[package]
name = "monitor_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9.4"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
json = "0.12"
serde_json = "1.0"
log = "0.4.8"
log4rs = "0.10.0"
itertools = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.24"
hmac = "0.12.1"
sha2 = "0.10.6"
base64 = "0.21.0"
hex = "0.3.1"
async-trait = "0.1.68"
actix-web ={ version = "3", features = ["rustls"] }
futures-util = { version = "0.3.17", default-features = false, features = [
    "std",
] }
mysql = "20.0.0"
rand = "0.8.5"
actix-cors = "0.2.0"
